--- a/web/comensal.html
+++ b/web/comensal.html
@@ -1,83 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="utf-8">
   <title>Comensal</title>
+  <!-- Importación de la biblioteca de iconos Font Awesome -->
   <script src="https://kit.fontawesome.com/6988ff5484.js" crossorigin="anonymous"></script>
-  <link href = "https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!-- Importación de iconos de Google Material Icons -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!-- Enlace a una hoja de estilo CSS externa -->
   <link rel="stylesheet" href="/css/style.css">
+  <!-- Configuración de la vista del dispositivo -->
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale = 1.0, maximun-scale=1.0, minimun-scale = 1.0">
 </head>
-
 <body>
-    <div class="container">
-        <aside>
-            <br>
-            <div class="close" id = "close-btn">
-                <span class="material-icons">
-                    close
-                    </span>
-            </div>
-            <div class="top">
-                <div class="logo">
-                    <img src ="imagenes/logoApp.png" alt = "">
-                    <h1 id="Sabor">&ensp;Sabor</h1>
-                    <h1 id="DIF">&ensp;DIF</h1>
-                </div>
-            </div>
-
-            <div class="sidebar">
-
-                <a href="/dashboard.html">
-                    <span class="material-icons">
-                        dashboard
-                        </span>
-                    <h3>Dashboard</h3>
-                </a>
-
-                <a href="comensal.html"  class="active">
-                    <span class="material-icons">
-                        bar_chart
-                        </span>
-                    <h3>Comensal</h3>
-                </a>
-
-                <span class="material-icons" id = "logout">
-                    logout
-                    </span>
-                <h3 id ="text-logout">Logout</h3>
-
-            </div>
-        </aside>
-        <main>
-            <h1>
-                Comensales
-            </h1>
-            <div class="graficas">
-                <div class ="column">
-                    <h1>Grupos vulnerables y condición de comensales</h1>
-                    <br>
-                    <canvas id="graficaCondiciones"></canvas>
-                </div>
-            </div>
-            
-        </main>
-        <!-----------END DE INSIGHTS-->
-        <div class="right">
-            <div class="top">
-                <button id="menu-btn">
-                    <span class="material-icons">
-                        menu
-                        </span>
-                </button>
-            </div>
+  <div class="container">
+    <aside>
+      <br>
+      <!-- Botón para cerrar el menú lateral -->
+      <div class="close" id="close-btn">
+        <span class="material-icons">
+          close
+        </span>
+      </div>
+      <div class="top">
+        <div class="logo">
+          <!-- Logo y nombre del sitio -->
+          <img src="imagenes/logoApp.png" alt="">
+          <h1 id="Sabor">&ensp;Sabor</h1>
+          <h1 id="DIF">&ensp;DIF</h1>
         </div>
+      </div>
+      <div class="sidebar">
+        <!-- Enlaces del menú lateral -->
+        <a href="/dashboard.html">
+          <span class="material-icons">
+            dashboard
+          </span>
+          <h3>Dashboard</h3>
+        </a>
+        <a href="comensal.html" class="active">
+          <span class="material-icons">
+            bar_chart
+          </span>
+          <h3>Comensal</h3>
+        </a>
+        <span class="material-icons" id="logout">
+          logout
+        </span>
+        <h3 id="text-logout">Logout</h3>
+      </div>
+    </aside>
+    <main>
+      <!-- Título principal de la página -->
+      <h1>
+        Comensales
+      </h1>
+      <div class="graficas">
+        <!-- Contenedores para gráficos -->
+        <div class ="column">
+          <h1>Grupos vulnerables y condición de comensales</h1>
+          <br>
+          <canvas id="graficaCondiciones"></canvas>
+        </div>
+      </div>
+    </main>
+    <div class="right">
+      <div class="top">
+        <!-- Botón para mostrar el menú lateral -->
+        <button id="menu-btn">
+          <span class="material-icons">
+            menu
+          </span>
+        </button>
+      </div>
     </div>
-
-    <script src="js/grafica.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="/js/menu.js"></script>
-    <script src="/js/logout.js"></script>
+  </div>
+  <!-- Importación de scripts JavaScript -->
+  <script src="js/grafica.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="/js/menu.js"></script>
+  <script src="/js/logout.js"></script>
 </body>
